--- a/index.html
+++ b/index.html
@@ -2,30 +2,112 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Homepage - Spotlight On You</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .main-heading {
+            font-size: 48px;
+            font-weight: bold;
+            margin: 20px 0 10px;
+            color: #111;
+        }
+
+        .subheading {
+            font-size: 24px;
+            font-weight: 300;
+            margin-bottom: 40px;
+            color: #555;
+        }
+
+        .thumbnails {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .thumbnail {
+            background-color: #fff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            width: 22%;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .thumbnail:hover {
+            transform: scale(1.05);
+        }
+
+        .thumbnail img {
+            width: 100%;
+            border-radius: 8px;
+        }
+
+        .thumbnail-text {
+            margin-top: 15px;
+            font-size: 14px;
+            line-height: 1.5;
+            color: #666;
+        }
+
+        @media (max-width: 768px) {
+            .thumbnail {
+                width: 45%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .thumbnail {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <h1 class="main-heading">Spotlight on You</h1>
         <p class="subheading">Find viral promo in seconds</p>
+
         <div class="thumbnails">
             <div class="thumbnail">
-                <img src="placeholder1.jpg" alt="Thumbnail 1">
-                <p class="thumbnail-text">Placeholder text for thumbnail 1</p>
+                <img src="https://via.placeholder.com/300" alt="Thumbnail 1">
+                <p class="thumbnail-text">Placeholder text for thumbnail 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
+
             <div class="thumbnail">
-                <img src="placeholder2.jpg" alt="Thumbnail 2">
-                <p class="thumbnail-text">Placeholder text for thumbnail 2</p>
+                <img src="https://via.placeholder.com/300" alt="Thumbnail 2">
+                <p class="thumbnail-text">Placeholder text for thumbnail 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
+
             <div class="thumbnail">
-                <img src="placeholder3.jpg" alt="Thumbnail 3">
-                <p class="thumbnail-text">Placeholder text for thumbnail 3</p>
+                <img src="https://via.placeholder.com/300" alt="Thumbnail 3">
+                <p class="thumbnail-text">Placeholder text for thumbnail 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
+
             <div class="thumbnail">
-                <img src="placeholder4.jpg" alt="Thumbnail 4">
-                <p class="thumbnail-text">Placeholder text for thumbnail 4</p>
+                <img src="https://via.placeholder.com/300" alt="Thumbnail 4">
+                <p class="thumbnail-text">Placeholder text for thumbnail 4. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </div>
-    </div
+    </div>
+</body>
+</html>
