--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage - Spotlight On You</title>
     <style>
@@ -48,6 +47,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             width: 22%;
+            aspect-ratio: 1 / 1; /* Ensures thumbnails are square */
             padding: 20px;
             text-align: center;
             transition: transform 0.3s ease;
@@ -60,6 +60,7 @@
         .thumbnail img {
             width: 100%;
             border-radius: 8px;
+            aspect-ratio: 1 / 1; /* Ensures images within thumbnails are square */
         }
 
         .thumbnail-text {
