--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 10px;
         }
 
         .thumbnail {
             background-color: #fff;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            width: 22%;
-            aspect-ratio: 1 / 1; /* Ensures thumbnails are square */
+            width: 250px; /* Fixed width for square thumbnails */
+            height: 250px; /* Fixed height for square thumbnails */
             padding: 20px;
             text-align: center;
             transition: transform 0.3s ease;
@@ -59,8 +59,9 @@
 
         .thumbnail img {
             width: 100%;
+            height: 100%;
             border-radius: 8px;
-            aspect-ratio: 1 / 1; /* Ensures images within thumbnails are square */
+            object-fit: cover;
         }
 
         .thumbnail-text {
@@ -73,12 +74,14 @@
         @media (max-width: 768px) {
             .thumbnail {
                 width: 45%;
+                height: auto;
             }
         }
 
         @media (max-width: 480px) {
             .thumbnail {
                 width: 100%;
+                height: auto;
             }
         }
     </style>
