--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 20px; /* Increased gap for more spacing between thumbnails */
         }
 
         .thumbnail {
@@ -65,7 +65,7 @@
         }
 
         .thumbnail-text {
-            margin-top: 15px;
+            margin-top: 20px; /* Increased margin to separate text from thumbnail */
             font-size: 14px;
             line-height: 1.5;
             color: #666;
