--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             display: flex;
             justify-content: space-between;
             flex-wrap: wrap;
-            gap: 20px; /* Increased gap for more spacing between thumbnails */
+            gap: 15px; /* Slightly reduced gap for better alignment */
         }
 
         .thumbnail {
@@ -65,7 +65,7 @@
         }
 
         .thumbnail-text {
-            margin-top: 20px; /* Increased margin to separate text from thumbnail */
+            margin-top: 15px; /* Slightly reduced margin for balance */
             font-size: 14px;
             line-height: 1.5;
             color: #666;
