--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             width: 250px; /* Fixed width for square thumbnails */
             height: 250px; /* Fixed height for square thumbnails */
             padding: 10px;
-            text-align: center;
+            text-align: left;
             transition: transform 0.3s ease;
         }
 
