--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             font-weight: bold;
             margin: 20px 0 10px;
             color: #111;
+            text-align: left;
         }
 
         .subheading {
@@ -33,6 +34,7 @@
             font-weight: 300;
             margin-bottom: 40px;
             color: #555;
+            text-align: left;
         }
 
         .thumbnails {
