--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-heading">Spotlight on You</h1>
-        <p class="subheading">Find viral promo in seconds</p>
+        <h1 class="main-heading">Spotlight<br> on you.</h1>
+        <p class="subheading">Find viral promo in seconds.</p>
 
         <div class="thumbnails">
             <div class="thumbnail">
