--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css"> <!-- if the CSS file is in the same directory -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage - Spotlight On You</title>
     <style>
