--- a/index.html
+++ b/index.html
@@ -2,92 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css"> <!-- if the CSS file is in the same directory -->
+    <link rel="stylesheet" href="styles.css"> <!-- This links to the external CSS file -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage - Spotlight On You</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .main-heading {
-            font-size: 72px;
-            font-weight: bold;
-            margin: 20px 0 10px;
-            color: #111;
-            text-align: left;
-        }
-
-        .subheading {
-            font-size: 24px;
-            font-weight: 300;
-            margin-bottom: 40px;
-            color: #555;
-            text-align: left;
-        }
-
-        .thumbnails {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 15px; /* Slightly reduced gap for better alignment */
-        }
-
-        .thumbnail {
-            background-color: #fff;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            width: 250px; /* Fixed width for square thumbnails */
-            height: 250px; /* Fixed height for square thumbnails */
-            padding: 10px;
-            text-align: left;
-            transition: transform 0.3s ease;
-        }
-
-        .thumbnail:hover {
-            transform: scale(1.05);
-        }
-
-        .thumbnail img {
-            width: 100%;
-            height: 100%;
-            border-radius: 8px;
-            object-fit: cover;
-        }
-
-        .thumbnail-text {
-            margin-top: 15px; /* Slightly reduced margin for balance */
-            font-size: 14px;
-            line-height: 1.5;
-            color: #666;
-        }
-
-        @media (max-width: 768px) {
-            .thumbnail {
-                width: 45%;
-                height: auto;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .thumbnail {
-                width: 100%;
-                height: auto;
-            }
-        }
-    </style>
 </head>
 <body>
     <div class="container">
