--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <p class="subheading">Find viral promo in seconds.</p>
 
         <div class="thumbnails">
+        <a href="booking.html" class="thumbnail-link">
             <div class="thumbnail">
                 <img src="https://via.placeholder.com/300" alt="Thumbnail 1">
                 <p class="thumbnail-text">Placeholder text for thumbnail 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-
+        </a>
             <div class="thumbnail">
                 <img src="https://via.placeholder.com/300" alt="Thumbnail 2">
                 <p class="thumbnail-text">Placeholder text for thumbnail 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
