--- a/booking.html
+++ b/booking.html
@@ -8,9 +8,30 @@
 </head>
 <body>
     <div class="container">
+        <!-- Heading -->
         <h1 class="main-heading">Book Your Promo Space</h1>
         <p class="subheading">Fill out the form to secure your spot for promotion.</p>
-        
+
+        <!-- Image Carousel -->
+        <div class="carousel">
+            <img src="https://via.placeholder.com/600x300" alt="Promo Space 1" class="carousel-image">
+            <img src="https://via.placeholder.com/600x300" alt="Promo Space 2" class="carousel-image">
+            <img src="https://via.placeholder.com/600x300" alt="Promo Space 3" class="carousel-image">
+        </div>
+
+        <!-- Promo Space Description -->
+        <div class="promo-description">
+            <h2>Description of the Promo Space</h2>
+            <p>Our promo space offers a unique opportunity for exposure. Whether you're an artist, brand, or influencer, this is the perfect place to get noticed. With high foot traffic and ideal placement, you'll be able to reach a wide audience and increase visibility.</p>
+        </div>
+
+        <!-- Social Media Link -->
+        <div class="social-media">
+            <h3>Follow Us:</h3>
+            <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        </div>
+
+        <!-- Booking Form -->
         <form class="booking-form">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required placeholder="Enter your name">
@@ -23,6 +44,11 @@
 
             <label for="message">Additional Message (Optional):</label>
             <textarea id="message" name="message" placeholder="Any special requests or notes?"></textarea>
+
+            <!-- Total Price -->
+            <div class="total-price">
+                <h4>Total Price: $500</h4>
+            </div>
 
             <button type="submit">Book Now</button>
         </form>
