--- a/booking.html
+++ b/booking.html
@@ -13,10 +13,14 @@
         <p class="subheading">Fill out the form to secure your spot for promotion.</p>
 
         <!-- Image Carousel -->
-        <div class="carousel">
-            <img src="https://via.placeholder.com/600x300" alt="Promo Space 1" class="carousel-image">
-            <img src="https://via.placeholder.com/600x300" alt="Promo Space 2" class="carousel-image">
-            <img src="https://via.placeholder.com/600x300" alt="Promo Space 3" class="carousel-image">
+        <div class="carousel-container">
+            <button class="carousel-btn prev" id="prev-btn">&#10094;</button>
+            <div class="carousel">
+                <img src="https://via.placeholder.com/600x300" alt="Promo Space 1" class="carousel-image">
+                <img src="https://via.placeholder.com/600x300" alt="Promo Space 2" class="carousel-image">
+                <img src="https://via.placeholder.com/600x300" alt="Promo Space 3" class="carousel-image">
+            </div>
+            <button class="carousel-btn next" id="next-btn">&#10095;</button>
         </div>
 
         <!-- Promo Space Description -->
@@ -53,5 +57,29 @@
             <button type="submit">Book Now</button>
         </form>
     </div>
+
+    <!-- JavaScript for carousel functionality -->
+    <script>
+        const prevBtn = document.getElementById('prev-btn');
+        const nextBtn = document.getElementById('next-btn');
+        const carousel = document.querySelector('.carousel');
+        let scrollPosition = 0;
+
+        prevBtn.addEventListener('click', () => {
+            scrollPosition -= 600; // Adjust this value to match the width of your images
+            if (scrollPosition < 0) {
+                scrollPosition = (carousel.scrollWidth - carousel.offsetWidth); // Loop back to the last image
+            }
+            carousel.style.transform = `translateX(-${scrollPosition}px)`;
+        });
+
+        nextBtn.addEventListener('click', () => {
+            scrollPosition += 600; // Adjust this value to match the width of your images
+            if (scrollPosition >= carousel.scrollWidth) {
+                scrollPosition = 0; // Loop back to the first image
+            }
+            carousel.style.transform = `translateX(-${scrollPosition}px)`;
+        });
+    </script>
 </body>
 </html>
