--- a/booking.html
+++ b/booking.html
@@ -34,70 +34,6 @@
             margin-bottom: 20px;
         }
 
-        /* Horizontal Carousel Styles */
-        .carousel-container {
-            position: relative;
-            overflow: hidden;
-            max-width: 100%;
-            margin: 30px auto;
-        }
-
-        .carousel {
-            display: flex;
-            gap: 10px;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .carousel img {
-            width: 300px;
-            height: 300px;
-            border-radius: 8px;
-            object-fit: cover;
-        }
-
-        .carousel-btn {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            border: none;
-            font-size: 24px;
-            padding: 10px;
-            cursor: pointer;
-            z-index: 10;
-        }
-
-        .prev {
-            left: 10px;
-        }
-
-        .next {
-            right: 10px;
-        }
-
-        .carousel-btn:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-
-        /* Promo Space Description */
-        .promo-description {
-            text-align: left;
-            margin-top: 20px;
-        }
-
-        .promo-description h2 {
-            font-size: 24px;
-            color: #111;
-            margin-bottom: 10px;
-        }
-
-        .promo-description p {
-            font-size: 16px;
-            color: #555;
-        }
-
-        /* Booking Form */
         .booking-form {
             background-color: white;
             padding: 20px;
@@ -136,12 +72,8 @@
             background-color: #333;
         }
 
-        /* Responsive */
-        @media (max-width: 768px) {
-            .carousel img {
-                width: 250px;
-                height: 250px;
-            }
+        .form-section {
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -151,76 +83,53 @@
         <h1 class="main-heading">Book Your Promo Space</h1>
         <p class="subheading">Fill out the form to secure your spot for promotion.</p>
 
-        <!-- Image Carousel -->
-        <div class="carousel-container">
-            <button class="carousel-btn prev" id="prev-btn">&#10094;</button>
-            <div class="carousel" id="carousel">
-                <img src="https://via.placeholder.com/300" alt="Promo Space 1">
-                <img src="https://via.placeholder.com/300" alt="Promo Space 2">
-                <img src="https://via.placeholder.com/300" alt="Promo Space 3">
-                <img src="https://via.placeholder.com/300" alt="Promo Space 4">
-                <img src="https://via.placeholder.com/300" alt="Promo Space 5">
-            </div>
-            <button class="carousel-btn next" id="next-btn">&#10095;</button>
-        </div>
-
-        <!-- Promo Space Description -->
-        <div class="promo-description">
-            <h2>Description of the Promo Space</h2>
-            <p>Our promo space offers a unique opportunity for exposure. Whether you're an artist, brand, or influencer, this is the perfect place to get noticed. With high foot traffic and ideal placement, you'll be able to reach a wide audience and increase visibility.</p>
-        </div>
-
         <!-- Booking Form -->
         <form class="booking-form">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required placeholder="Enter your name">
-
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required placeholder="Enter your email">
-
-            <label for="promo-date">Preferred Promo Date:</label>
-            <input type="date" id="promo-date" name="promo-date" required>
-
-            <label for="message">Additional Message (Optional):</label>
-            <textarea id="message" name="message" placeholder="Any special requests or notes?"></textarea>
-
-            <div class="total-price">
-                <h4>Total Price: $500</h4>
+            <!-- Name -->
+            <div class="form-section">
+                <label for="name">Your Social Media Handle:</label>
+                <input type="text" id="name" name="name" required placeholder="@handle">
             </div>
 
-            <button type="submit">Book Now</button>
+            <!-- Email -->
+            <div class="form-section">
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" required placeholder="email@email.com">
+            </div>
+
+            <!-- Promo Date -->
+            <div class="form-section">
+                <label for="promo-date">Preferred Promo Date:</label>
+                <input type="date" id="promo-date" name="promo-date" required>
+            </div>
+
+            <!-- Additional Message -->
+            <div class="form-section">
+                <label for="message">What are you promoting?</label>
+                <textarea id="message" name="message" placeholder="I would like to promote my..."></textarea>
+            </div>
+
+            <!-- Upload Images -->
+            <div class="form-section">
+                <label for="images">Upload Images (Optional):</label>
+                <input type="file" id="images" name="images[]" multiple accept="image/*">
+                <small>You can upload multiple images.</small>
+            </div>
+
+            <!-- Links -->
+            <div class="form-section">
+                <label for="links">Links (Optional):</label>
+                <input type="url" id="links" name="links" placeholder="Enter a link (e.g., website, social media)">
+            </div>
+
+            <!-- Total Price -->
+            <div class="form-section total-price">
+                <h4>Total Price: $50</h4>
+            </div>
+
+            <!-- Submit Button -->
+            <button type="submit">Request booking</button>
         </form>
     </div>
-
-    <script>
-        const carousel = document.getElementById('carousel');
-        const prevBtn = document.getElementById('prev-btn');
-        const nextBtn = document.getElementById('next-btn');
-
-        let scrollAmount = 0;
-        const scrollStep = 310; // Width of the images (300px) + gap (10px)
-
-        prevBtn.addEventListener('click', () => {
-            scrollAmount -= scrollStep;
-            if (scrollAmount < 0) {
-                scrollAmount = carousel.scrollWidth - carousel.clientWidth; // Loop to the end
-            }
-            carousel.scrollTo({
-                left: scrollAmount,
-                behavior: 'smooth'
-            });
-        });
-
-        nextBtn.addEventListener('click', () => {
-            scrollAmount += scrollStep;
-            if (scrollAmount >= carousel.scrollWidth) {
-                scrollAmount = 0; // Loop to the start
-            }
-            carousel.scrollTo({
-                left: scrollAmount,
-                behavior: 'smooth'
-            });
-        });
-    </script>
 </body>
 </html>
