--- a/booking.html
+++ b/booking.html
@@ -140,6 +140,13 @@
             <button class="carousel-btn next" id="next-btn">&#10095;</button>
         </div>
 
+
+          <!-- Promo Space Description -->
+        <div class="promo-description">
+            <h2>Description of the Promo Space</h2>
+            <p>Our promo space offers a unique opportunity for exposure. Whether you're an artist, brand, or influencer, this is the perfect place to get noticed. With high foot traffic and ideal placement, you'll be able to reach a wide audience and increase visibility.</p>
+        </div>
+
         <!-- Booking Form -->
         <form class="booking-form">
             <!-- Name -->
