--- a/booking.html
+++ b/booking.html
@@ -143,22 +143,22 @@
 
           <!-- Promo Space Description -->
         <div class="promo-description">
-            <h2>Description of the Promo Space</h2>
-            <p>Our promo space offers a unique opportunity for exposure. Whether you're an artist, brand, or influencer, this is the perfect place to get noticed. With high foot traffic and ideal placement, you'll be able to reach a wide audience and increase visibility.</p>
+            <h2>Instagram page 24 hour story</h2>
+            <p>12m Followers <br> 50k monthly story impressions <br> Our instagram page reaches many people in the health space. Those looking for new ways to keep a slim body.</p>
         </div>
 
         <!-- Booking Form -->
         <form class="booking-form">
             <!-- Name -->
             <div class="form-section">
-                <label for="name">Your Name:</label>
-                <input type="text" id="name" name="name" required placeholder="Enter your name">
+                <label for="name">Your Social Media Handle (specify which social media):</label>
+                <input type="text" id="name" name="name" required placeholder="Instagram: @handle">
             </div>
 
             <!-- Email -->
             <div class="form-section">
                 <label for="email">Your Email:</label>
-                <input type="email" id="email" name="email" required placeholder="Enter your email">
+                <input type="email" id="email" name="email" required placeholder="email@email.com">
             </div>
 
             <!-- Promo Date -->
@@ -169,8 +169,8 @@
 
             <!-- Additional Message -->
             <div class="form-section">
-                <label for="message">Additional Message (Optional):</label>
-                <textarea id="message" name="message" placeholder="Any special requests or notes?"></textarea>
+                <label for="message">What are you promoting? Describe how you want your ad to look:</label>
+                <textarea id="message" name="message" placeholder="I'm promoting my..."></textarea>
             </div>
 
             <!-- Upload Images -->
@@ -188,11 +188,11 @@
 
             <!-- Total Price -->
             <div class="form-section total-price">
-                <h4>Total Price: $500</h4>
+                <h4>Total Price: $50</h4>
             </div>
 
             <!-- Submit Button -->
-            <button type="submit">Book Now</button>
+            <button type="submit">Request booking</button>
         </form>
     </div>
 
