--- a/booking.html
+++ b/booking.html
@@ -143,8 +143,8 @@
 
           <!-- Promo Space Description -->
         <div class="promo-description">
-            <h2>Instagram page 24 hour story</h2>
-            <p>12m Followers <br> 50k monthly story impressions <br> Our instagram page reaches many people in the health space. Those looking for new ways to keep a slim body.</p>
+            <h2 text-align: left;>Instagram page 24 hour story</h2>
+            <p text-align: left;>12m Followers <br> 50k monthly story impressions <br> Our instagram page reaches many people in the health space. Those looking for new ways to keep a slim body.</p>
         </div>
 
         <!-- Booking Form -->
