--- a/booking.html
+++ b/booking.html
@@ -148,54 +148,53 @@
 </div>
 
 
-        <!-- Booking Form -->
-        <form class="booking-form">
-            <!-- Name -->
-            <div class="form-section">
-                <label for="name">Your Social Media Handle (specify which social media):</label>
-                <input type="text" id="name" name="name" required placeholder="Instagram: @handle">
-            </div>
-
-            <!-- Email -->
-            <div class="form-section">
-                <label for="email">Your Email:</label>
-                <input type="email" id="email" name="email" required placeholder="email@email.com">
-            </div>
-
-            <!-- Promo Date -->
-            <div class="form-section">
-                <label for="promo-date">Preferred Promo Date:</label>
-                <input type="date" id="promo-date" name="promo-date" required>
-            </div>
-
-            <!-- Additional Message -->
-            <div class="form-section">
-                <label for="message">What are you promoting? Describe how you want your ad to look:</label>
-                <textarea id="message" name="message" placeholder="I'm promoting my..."></textarea>
-            </div>
-
-            <!-- Upload Images -->
-            <div class="form-section">
-                <label for="images">Upload Images (Optional):</label>
-                <input type="file" id="images" name="images[]" multiple accept="image/*">
-                <small>You can upload multiple images.</small>
-            </div>
-
-            <!-- Links -->
-            <div class="form-section">
-                <label for="links">Links (Optional):</label>
-                <input type="url" id="links" name="links" placeholder="Enter a link (e.g., website, social media)">
-            </div>
-
-            <!-- Total Price -->
-            <div class="form-section total-price">
-                <h4>Total Price: $50</h4>
-            </div>
-
-            <!-- Submit Button -->
-            <button type="submit">Request booking</button>
-        </form>
+       <form class="booking-form">
+    <!-- Social Media Handle -->
+    <div class="form-section">
+        <label for="name">Your Social Media Handle (specify which social media):</label>
+        <input type="text" id="name" name="name" required placeholder="Instagram: @handle">
     </div>
+
+    <!-- Email -->
+    <div class="form-section">
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" name="email" required placeholder="email@email.com">
+    </div>
+
+    <!-- Promo Date -->
+    <div class="form-section">
+        <label for="promo-date">Preferred Promo Date:</label>
+        <input type="date" id="promo-date" name="promo-date" required>
+    </div>
+
+    <!-- Additional Comments -->
+    <div class="form-section">
+        <label for="message">What are you promoting? Describe how you want your ad to look:</label>
+        <textarea id="message" name="message" placeholder="I'm promoting my..."></textarea>
+    </div>
+
+    <!-- Upload Images -->
+    <div class="form-section">
+        <label for="images">Upload Images (Optional):</label>
+        <input type="file" id="images" name="images[]" multiple accept="image/*">
+        <small>You can upload multiple images.</small>
+    </div>
+
+    <!-- Links -->
+    <div class="form-section">
+        <label for="links">Links (Optional):</label>
+        <input type="url" id="links" name="links" placeholder="Enter a link (e.g., website, social media)">
+    </div>
+
+    <!-- Total Price -->
+    <div class="form-section total-price">
+        <h4>Total Price: $50</h4>
+    </div>
+
+    <!-- Submit Button -->
+    <button type="submit">Request booking</button>
+</form>
+
 
     <!-- JavaScript for carousel functionality -->
     <script>
